edit p-praxis.html and notes-p.xml

--- a/lib/assets/p-praxis.html
+++ b/lib/assets/p-praxis.html
@@ -6,7 +6,7 @@
         <meta name="description" content="Edition Criteria for Padua"/>
         <meta name="viewport" content="initial-scale=1.0, width=device-width" />
         <title>Huon Encoding Praxis</title>
-        <link rel="stylesheet" type="text/css" href="huon-praxis.css"/>
+        <link rel="stylesheet" type="text/css" href="praxis.css"/>
     </head>
 
     <body>
@@ -180,23 +180,36 @@
 
         <h3>3.2 Acute Accent</h3>
 
-        <p>The accute accent (é) occurs only on the vowel e to indicate:</p>
+        <p>When possible, the accute accent (<em>é</em>) follows modern usage. The accute accent occurs only on the vowel <em>e</em> to indicate:</p>
 
         <div class="example">
+
         <ol>
-            <li>A past participle of the Old French first conjugation -ER. These forms occur in rhymed position: intré (v. 409); twice they occur within a line: caçé (v. 2069); andé (v. 3451);</li>
-            <li>To indicate the second person plural indicative of the first conjugation -ARE: fé (v. 39)(however, fé as second person singular, v. 3744);
-            </li>
-            <li>The second person plural imperative of the first congugation -ARE: ascholté (v. 19); the imperative form of ESSERE: sié (v. 441)(note apocopated form sì, v. 439); of DIRE: dissé (v. 1192); of FARE: fé (v. 31)(note second person plural indicative variant fé, v. 39). Nb: this form is not to be confused with fè (see point 2 below), which is reserved for the third person singular for of FARE.</li>
-            <li>Subjunctive forms: abié, "che vui me abié in vostra recordaxon" (v. 1628)</li>
-            <li>Oxytone nouns and conjunctions: pié (v. 303); merçé (v. 438); perché (v. 426). Also, for frequent monosyllabic nouns: fé (v. 197_
-<!-- STOP HERE -->
-                plé (428); mé (443, 2151, 2162, 2630); pré (443).
-</li>
-            <li></li>
-            <li></li>
+
+            <li>A past participle of the Old French first conjugation -ER. These forms occur in rhymed position: intré (v. 409); twice they occur within a line: <em>à caçé</em> (v. 2069); <em>è Sanguin andé</em> (v. 1018).</li>
+
+            <li>The second person plural indicative of the first conjugation -ARE: <em>vui parlé</em>(v. 363); the second person plural imperative of the first congugation -ARE: <em>ascholté</em> (v. 19); <em>lasé</em>(v. 33); and the imperative form of some irregular verbs: ESSERE <em>sié</em> (v. 441)(note apocopated form <em>si'</em>, v. 439), DIRE <em>dissé</em> (v. 1192), ANDARE <em>andé</em> (v. 32), FARE <em>fé</em> (v. 31). The meanings and forms of <em>fé</em> are problematic and overdermined in our text; in addition to the imperative form above, note for example the second person plural subjunctive variant <em>fé</em> (v. 39) (see § 3.2.3 below),<!-- ask #LZM if she interprets this is as subjunctive as well --> the second person singular <em>fé</em> (v. 3744), <!-- French form? --> the third person singular preterit form <em>fè</em> (see § 3.3.2 ), and the noun <em>fé</em> ("faith," see § 3.2.4).</li>
+
+            <li>Subjunctive forms: <em>abié</em>, "<em>che vui me abié in vostra recordaxon</em>" (v. 1628), <em>fé</em>, "<em>Che vuy lo fé servir al so comandamant</em>" (v. 39).</li>
+
+            <li>Oxytone nouns and conjunctions: <em>pié</em> (v. 84); <em>merçé</em> (v. 438); <em>perché</em> (v. 426). Also, for frequent monosyllabic nouns: <em>fé</em> (v. 197), <em>pré</em> (417); <em>mé</em> (443).</li>
+
+            <li>On the adverb <em>asé</em> (545), <em>assé</em> (1516), derived from the Old French <em>asez</em>. <!-- cite Tobler-Lommatch here --> On the adverb <em>né</em> (2008, 2022). On the adverb <em>drié</em> (v. 175) and its derivative forms <em>dadrié</em> (v. 946) and <em>indrié</em> (v. 527). <!-- footnote: Morgan, in her edition of the Padua Hell scene, does not accent these adverbs --></li>
+
+            <li>The acute accent is added on oxytone third person preterit forms. However, on stem accented preterit and past participle forms, no accent is used: <em>poté</em> (v. 272); <em>abaté</em> (v. 709), <em>abatté</em> (v. 910), but <em>abatà</em> (v. 2312); <em>nassé</em> (903). As is often the case with medieval texts, the present and the past tenses frequently alternate. For this reason, forms that alternate tense with only an accent are problematic: <em>abate</em> (v. 513) vs. <em>abaté</em> (v. 709). In passages such as these I interpret from context and note variant interpretations.</li>
+
         </ol>
+
         </div>
+
+        <h3>3.3 Grave Accent</h3>
+
+        <p>The grave accent (<em>è</em>) occurs only on the vowel e to indicate:</p>
+
+        <li></li>
+
+        serè ("closed, shut" 833); partì (1638);
+
 
         <h2>&#10081; 4. Emendations</h2>
 
